# smogickDo

./: .gitignore  README.md
backend/: Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 118d39b95049_todoinit.py  8ab2fa469895_create_todo_table.py
backend/envs/: dev.env
backend/src/: db_models.py  main.py
backend/src/core/: config.py  repositories.py
backend/src/core/db/: session.py
backend/src/shared/: exceptions.py  router_generator.py  schemas.py
backend/src/todo/: controllers.py  db.py  repositories.py  schemas.py  services.py
frontend/: package-lock.json  package.json  swagger-codegen.js
frontend/src/: App.tsx
frontend/src/components/todo/: TodoPage.tsx
frontend/src/shared/constants/: urls.const.ts
frontend/src/shared/http/: ApiService.ts  http.ts
frontend/src/shared/models/: ApiModels.ts  Generic.types.ts
